--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="main.js"></script>
-    <title>JavaScript-TodoList</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <script defer src="js/app.js"></script>
+    <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="dateof">
+        Date of Today
+        <time class="date">2021/09/02</time>
+      </div>
+      <h1 class="planner__name">Everything Daily Planner</h1>
+    </header>
+
+    <main class="main">
+      <span class="todo">
+        <p>======== To Do ========</p>
+        <p>
+          <input type="text" class="input__text" /><button class="button">
+            Add
+          </button>
+        </p>
+        <p>=====================</p>
+
+        <ul class="incompleted__task">
+          <li class="checskbox__list">
+            <input type="checkbox" class="checkbox" />
+            <p class="task">Coding Study how to do it until tonight</p>
+          </li>
+        </ul>
+      </span>
+    </main>
+  </body>
 </html>
