Binding new list

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
 
     <main class="main">
       <span class="todo">
-        <p>======== To Do ========</p>
+        <p>============= To Do ============</p>
         <p>
-          <input type="text" class="input__text" /><button class="button">
-            Add
-          </button>
+          <input type="text" class="input__text" />
+          <button class="button">Add</button>
         </p>
-        <p>=====================</p>
+        <p>===============================</p>
 
         <ul class="incompleted__task">
           <li class="checskbox__list">
             <input type="checkbox" class="checkbox" />
             <p class="task">Coding Study how to do it until tonight</p>
+            <button class="delete">delete</button>
+            <button class="edit">edit</button>
           </li>
         </ul>
       </span>
